--- a/index.html
+++ b/index.html
@@ -9,7 +9,53 @@
     </head>
 
     <body>
-       <p>first commit XD</p> 
+        <nav>
+            <ul>
+                <li><a class="nav-link" href="#">Gmail</a></li>
+                <li><a class="nav-link" href="#">Images</a></li>
+            </ul>
+
+            <ul>
+                <li>
+                    <img src="/google-homepage/src/apps-24px.svg" alt="apps" />
+                </li>
+                <li><button>Sign in</button></li>
+            </ul>
+        </nav>
+
+        <main>
+            <div class="logo">
+                <img
+                    src="/google-homepage/src/google_logo.png"
+                    alt="google logo"
+                />
+            </div>
+
+            <div class="search-bar">
+                <input type="search" name="search" class="search" />
+            </div>
+
+            <div class="lucky">
+                <button>Google Search</button>
+                <button>I'm Feeling Lucky</button>
+            </div>
+        </main>
+
+        <footer>
+            <ul>
+                <li><a class="nav-link" href="#">About</a></li>
+                <li><a class="nav-link" href="#">Advertising</a></li>
+                <li><a class="nav-link" href="#">Business</a></li>
+                <li><a class="nav-link" href="#">How Search Works</a></li>
+            </ul>
+
+            <ul>
+                <li><a class="nav-link" href="#">Privacy</a></li>
+                <li><a class="nav-link" href="#">Terms</a></li>
+                <li><a class="nav-link" href="#">Settings</a></li>
+            </ul>            
+
+        </footer>
 
     </body>
 </html>
