first attempt: added `styles` folder

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Google</title>
-        <link rel="stylesheet" href="style.css" />
+        <link rel="stylesheet" href="styles/style.css" />
     </head>
 
     <body>
@@ -53,9 +53,8 @@
                 <li><a class="nav-link" href="#">Privacy</a></li>
                 <li><a class="nav-link" href="#">Terms</a></li>
                 <li><a class="nav-link" href="#">Settings</a></li>
-            </ul>            
-
+            </ul>
         </footer>
-
+        
     </body>
 </html>
