Replace sign-in button with user-avatar

--- a/index.html
+++ b/index.html
@@ -20,7 +20,14 @@
                     src="/google-homepage/src/apps-24px.svg"
                     alt="apps"
                 />
-                <button>Sign in</button>
+                <!-- <button>Sign in</button> -->
+                <a href="https://github.com/plskz">
+                    <img
+                        class="user"
+                        src="/google-homepage/src/oreo.jpg"
+                        alt="oreo"
+                    />
+                </a>
             </nav>
         </header>
 
